# backend

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: check_code.yml
app/: config.py  db.py  main.py
configs/: app.yml
scripts/: run_server.py
